# KrotPN

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  PROJECT_REPORT.md  QUICKSTART.md  README.md  docker-compose.yml  install.sh  mygrace.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  cli.py  main.py
backend/tests/: conftest.py  test_admin_device_control.py  test_anti_ping_pong_detector.py  test_auth_rejection.py  test_awg_obfuscation.py  test_billing_plan_api.py  test_billing_security.py  test_billing_service.py  test_billing_tariff_catalog.py  test_db_migrations.py  test_deploy_awg_obfuscation_static.py  test_deploy_network_subnets_static.py  test_deploy_phase38_static.py  test_device_access_policy.py  test_device_api.py  test_device_audit_log.py  test_device_migration.py  test_device_registry.py  test_domain_tls_edge_static.py  test_email_delivery.py  test_email_verification_guard.py  test_handshake_anomaly_detector.py  test_kpproton_runtime_bridge.py  test_manual_access_policy.py  test_manual_client_cli.py  test_mtproto_admin_alerts.py  test_mtproto_admin_analytics_api.py  test_mtproto_admin_ops.py  test_mtproto_analytics_service.py  test_mtproto_api.py  test_mtproto_assignment_registry.py  test_mtproto_availability_diagnostics.py  test_mtproto_de_edge_contract.py  test_mtproto_ip_observability.py  test_mtproto_manual_proxy_pool.py  test_mtproto_promotion_tag.py  test_mtproto_provisioning.py  test_mtproto_usage_telemetry.py  (+19 more)
(+547 files in other folders)
